// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cell component > renders correctly 1`] = `
<div>
  <input
    class="border border-black"
    value=""
  />
</div>
`;

exports[`Cell component > renders formulas 1`] = `
<div>
  <input
    class="border border-black"
    value="=SUM(2,2)"
  />
</div>
`;

exports[`Cell component > renders numbers 1`] = `
<div>
  <input
    class="border border-black"
    value="42"
  />
</div>
`;

exports[`Cell component > renders text 1`] = `
<div>
  <input
    class="border border-black"
    value="Hello World!"
  />
</div>
`;
